# intern-rival

./: README.md
01_OPENCV_PERMEN/: CMakeLists.txt
01_OPENCV_PERMEN/include/: ball.cpp  ball.h  tangkap.cpp  tangkap.h
01_OPENCV_PERMEN/src/: main.cpp
02_ROS/devel/: .catkin  .rosinstall  _setup_util.py
02_ROS/devel/lib/pkgconfig/: turtle_controller_node.pc
02_ROS/devel/lib/turtle_controller_node/: turtle_controller_node
02_ROS/devel/share/turtle_controller_node/cmake/: turtle_controller_nodeConfig.cmake
02_ROS/src/turtle_controller_node/: CMakeLists.txt  package.xml
02_ROS/src/turtle_controller_node/src/: turtle_controller_node.cpp
